-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.22, 10.1.23
-
Fix Version/s: 10.1.25
-
Component/s: Encryption, Storage Engine - InnoDB, Storage Engine - XtraDB
-
Labels:
It takes about 10 mins to start, had seen the same issue earlier in 10.1.18 which was fixed but has reoccurred in 10.1.22
2017-04-27 15:48:10 139983869696032 [Warning] option 'general_log': boolean value 'xxxxx.log' wasn't recognized. Set to OFF.
|
2017-04-27 15:48:10 139983869696032 [Warning] 'THREAD_CONCURRENCY' is deprecated and will be removed in a future release.
|
2017-04-27 15:48:10 139983869696032 [Note] /usr/libexec/mysqld (mysqld 10.1.22-MariaDB) starting as process 19851 ...
|
2017-04-27 15:48:12 7f5088d3d820 InnoDB: Warning: Using innodb_additional_mem_pool_size is DEPRECATED. This option may be removed in future releases, together with the option innodb_use_sys_malloc and with the InnoDB's internal memory allocator.
|
2017-04-27 15:48:12 139983869696032 [Note] InnoDB: Using mutexes to ref count buffer pool pages
|
2017-04-27 15:48:12 139983869696032 [Note] InnoDB: The InnoDB memory heap is disabled
|
2017-04-27 15:48:12 139983869696032 [Note] InnoDB: Mutexes and rw_locks use GCC atomic builtins
|
2017-04-27 15:48:12 139983869696032 [Note] InnoDB: GCC builtin __sync_synchronize() is used for memory barrier
|
2017-04-27 15:48:12 139983869696032 [Note] InnoDB: Compressed tables use zlib 1.2.3
|
2017-04-27 15:48:12 139983869696032 [Note] InnoDB: Using Linux native AIO
|
2017-04-27 15:48:12 139983869696032 [Note] InnoDB: Using SSE crc32 instructions
|
2017-04-27 15:48:12 139983869696032 [Note] InnoDB: Initializing buffer pool, size = 2.0G
|
2017-04-27 15:48:12 139983869696032 [Note] InnoDB: Completed initialization of buffer pool
|
2017-04-27 15:48:13 139983869696032 [Note] InnoDB: Highest supported file format is Barracuda.
|
2017-04-27 15:58:24 139983869696032 [Note] InnoDB: 128 rollback segment(s) are active.
|
2017-04-27 15:58:24 139983869696032 [Note] InnoDB: Waiting for purge to start
|
2017-04-27 15:58:24 139983869696032 [Note] InnoDB: Percona XtraDB (http://www.percona.com) 5.6.35-80.0 started; log sequence number 657936019547
|
2017-04-27 15:58:25 139980747806464 [Note] InnoDB: Dumping buffer pool(s) not yet started
|
2017-04-27 15:58:25 139983869696032 [Note] Plugin 'FEEDBACK' is disabled.
|
2017-04-27 15:58:25 139983869696032 [Note] Server socket created on IP: '::'.
|
2017-04-27 15:58:25 139983869696032 [Note] /usr/libexec/mysqld: ready for connections.
|
Version: '10.1.22-MariaDB' socket: 'xxxxx.sock' port: 3306 MariaDB Server
|
- is caused by
-
MDEV-12623 InnoDB: Failing assertion: kv == 0 || kv >= crypt_data->min_key_version, encryption.innodb_encryption_tables failed in buildbot
-
- Closed
-
- is duplicated by
-
MDEV-15333 MariaDB (still) slow start
-
- Closed
-
- relates to
-
MDEV-9931 InnoDB reads first page of every .ibd file at startup
-
- Closed
-
-
MDEV-21715 Allow loading buffer pool dumps for encrypted tablespaces
-
- Open
-
-
MDEV-10198 MariaDB restart is too slow
-
- Closed
-